--- a/_includes/redirect.html
+++ b/_includes/redirect.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  var personalHost = "mcomisso.github.io";
+  var personalHost = "mcomisso.xyz";
   if((window.location.host === personalHost) && (window.location.protocol != "https:")) {
     window.location.protocol = "https";
   }
