--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,6 @@
 
 {% if site.github %}
-  <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">
+  <div class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
     <div id="disqus_thread"></div>
     <script>
     /**
