Moving from css to sass

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,8 @@ layout: default
 title: Projects
 ---
 {% comment %}
-Page base layout
+Page base layout.
+The variable page.colored is set to switch content's wrapper between mdl-card and single max-width column.
 {% endcomment %}
 
 <div class="mdl-cell
