--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,7 +6,7 @@ GENERIC
 */
 main {
   background-color: #fafafa;
-  border-bottom: 3px solid $primary;
+  /*border-bottom: 3px solid $primary; */
 }
 
 /* Code syntax personalization */
