Changes to post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,9 @@ comments: true
   <div class="mdl-card max-width mdl-shadow--2dp">
     <div class="mdl-card__supporting-text">
     {{ content }}
+    
+    <hr/>
+    <h5>Questions? Feel free to ask!</h5>
     </div>
   </div>
 
