--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ title: Projects
 ---
 {% comment %}
 Page base layout.
-The variable page.colored is set to switch content's wrapper between mdl-card and single max-width column.
+The variable page.card is set to switch content's wrapper between mdl-card and single max-width column.
 {% endcomment %}
 
 <div class="mdl-cell
@@ -12,7 +12,7 @@ The variable page.colored is set to switch content's wrapper between mdl-card an
   mdl-cell--2-offset-desktop
   mdl-cell--4-col-phone
   mdl-cell--8-col-tablet">
-{% if page.colored %}
+{% if page.card %}
   {% comment %} This layout is for every page with white background. {% endcomment %}
   <div class="mdl-card max-width mdl-shadow--2dp">
     <div class="mdl-card__supporting-text">
