--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -18,7 +18,7 @@
           <!-- Navigation buttons -->
           <div class="mdl-card__actions mdl-card--border">
             <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/blog">Blog</a>
-            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/projects">Projects</a>
+            <!-- <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/projects">Projects</a> -->
             <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/about">About</a>
           </div>
 
