--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,5 @@
 <div class="mdl-layout__drawer">
+  <img class="logo_sidebar" src="/images/logo_small.png"/>
   <span class="mdl-layout__title">
     {{site.title}}
   </span>
