--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -9,4 +9,5 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="Matteo Comisso">
 <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+<link rel="icon" type="image/png" href="/favicon.png">
 <!-- <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png"> -->
