--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -10,4 +10,5 @@
 <meta name="apple-mobile-web-app-title" content="Matteo Comisso">
 <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 <link rel="icon" type="image/png" href="/favicon.png">
-<!-- <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png"> -->
+<link rel="apple-touch-icon" sizes="120x120" href="/images/icons/touch-iphone-retina-icon.jpg">
+<link rel="apple-touch-icon" sizes="152x152" href="/images/icons/touch-ipad-retina-icon.jpg">
