--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,8 @@
 <div class="mdl-layout__drawer">
-  <img class="logo_sidebar" src="/images/logo_small.png"/>
+  <div class="centered">
+    <h1> ~/ </h1>
+  </div>
+  <!--<img class="logo_sidebar" src="/images/logo_small.png"/>-->
   <span class="mdl-layout__title">
     {{site.title}}
   </span>
