--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -4,11 +4,12 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="Matteo Comisso">
 <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 <link rel="icon" type="image/png" href="/favicon.png">
+
+<!--Apple homescreen icons-->
 <link rel="apple-touch-icon" sizes="120x120" href="/images/icons/touch-iphone-retina-icon.jpg">
 <link rel="apple-touch-icon" sizes="152x152" href="/images/icons/touch-ipad-retina-icon.jpg">
