Other changes to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
     <ul class="mdl-list">
       <li class="mdl-list__item">
         <span class="mdl-list__item-primary-content">
-          Latest posts
+          Latest 3 posts:
         </span>
       </li>
       <!-- Loop for latest posts -->
@@ -24,7 +24,11 @@
     </ul>
   </nav>
   <!-- Insert latest posts -->
+  <div class="mdl-layout-spacer"></div>
   <span class="mdl-layout__title" >
-    {{site.title}}
+    <a href="/">
+      {{site.title}}
+    </a>
   </span>
+
 </div>
