--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,5 +30,8 @@
       {{site.title}}
     </a>
   </span>
+  <div>
+    <a href="/res/mcomisso.pkpass"><img class="passbook" src="/images/icons/add-to-apple-wallet-logo.png" alt="Add to passbook" /></a>
+  </div>
 
 </div>
