--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,16 @@ pre {
 }
 
 /**********************************************/
+/*                   SIDEBAR                  */
+/**********************************************/
+
+img.passbook {
+  width: 50%;
+  margin-bottom: 10px;
+  margin-left: 25%;
+}
+
+/**********************************************/
 /*                   LANDING                  */
 /**********************************************/
 
