Updated font awesome

--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css" />
 
 <!-- Font Awesome! https://fortawesome.github.io -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+<script src="https://use.fontawesome.com/af7a57eeb1.js"></script>
 
 <!-- Custom css -->
 <link href="/css/main.css" type="text/css" rel="stylesheet" />
