--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,10 @@ body {
 /**********************************************/
 /*                    POSTS                   */
 /**********************************************/
+.post-header {
+  height: 150px;
+}
+
 img.max-width {
   max-width: 200px;
 }
