--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,21 @@ comments: true
 {% endcomment %}
 <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop mdl-cell--4-col-phone mdl-cell--8-col-tablet">
   <div class="mdl-card max-width mdl-shadow--2dp">
+    <div class="mdl-card__title post-header mdl-color--blue-grey-800">
+      <h2 class="mdl-card__title-text mdl-color-text--grey-100">
+        {{ page.description }}
+      </h2>
+    </div>
     <div class="mdl-card__supporting-text">
-    {{ content }}
-    
-    <hr/>
-    <h5>Questions? Feel free to ask!</h5>
+      {{ content }}
+      <hr/>
+      <h5>Questions? Feel free to ask!</h5>
+    </div>
+
+    <div class="mdl-card__menu">
+      <button id="share-post" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+        <i class="material-icons mdl-color-text--grey-100">share</i>
+      </button>
     </div>
   </div>
 
