--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ comments: true
 <!-- contains the single post -->
 {% endcomment %}
 <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop mdl-cell--4-col-phone mdl-cell--8-col-tablet">
-  <div class="mdl-card max-width mdl-shadow--2dp">
+  <div class="mdl-card max-width mdl-shadow--2dp mdl-animation--default">
     <div class="mdl-card__title post-header mdl-color--blue-grey-800">
       <h2 class="mdl-card__title-text mdl-color-text--grey-100">
         {{ page.description }}
@@ -23,6 +23,16 @@ comments: true
         <i class="material-icons mdl-color-text--grey-100">share</i>
       </button>
     </div>
+    <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+    for="share-post">
+      <li class="mdl-menu__item">
+        <a class="mdl-navigation__link" target="_blank" href="https://twitter.com/intent/tweet?via={{ site.about.services[1].username | remove: '@' }}&text={{page.description}}&url={{ site.url | append: page.url | url_encode }}"><i class="fa fa-twitter"></i> Twitter</a>
+      </li>
+      <li class="mdl-menu__item">
+        <a class="mdl-navigation__link" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url | append: page.url | url_encode }}"><i class="fa fa-facebook"></i> Facebook</a>
+      </li>
+    </ul>
+
   </div>
 
   <!-- PREV - NEXT pages -->
