Facebook sharing image and meta tag

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -27,3 +27,4 @@
 <meta property="og:description"        content="Personal website of Matteo Comisso" />
 <meta property="og:type"               content="website" />
 {% endif %}
+<meta property="og:image"              content="{{site.url}}/images/icons/icon200x200.png" />
