--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -14,7 +14,19 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/images/icons/touch-iphone-retina-icon.jpg">
 <link rel="apple-touch-icon" sizes="152x152" href="/images/icons/touch-ipad-retina-icon.jpg">
 
-<!--Facebook sharer-->
+<!-- Twitter Metadata -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@teomatteo89" />
+<meta name="twitter:image" content="{{site.url}}/images/icons/icon200x200.png" />
+{% if page.layout == 'post' %}
+<meta name="twitter:title" content="{{page.title}}" />
+<meta name="twitter:description" content="{{page.description}}" />
+{% else %}
+<meta name="twitter:title" content="~/" />
+<meta name="twitter:description" content="Matteo Comisso's personal website." />
+{% endif %}
+
+<!-- Facebook Metadata -->
 {% if page.layout == 'post' %}
 <meta property="og:url"                content="{{ site.url }}{{page.url}}" />
 <meta property="og:og:site_name"       content="~/" />
