Added Kiwi website

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
       {% for project in site.data.projects.[include.status] %}
       <li class="mdl-list__item mal mdl-list__item--three-line">
         <span class="mdl-list__item-primary-content">
-          <a href="{{project.site}}"><span>{{ project.name }}</span></a>
+          <a href="{{project.site}}" target="_blank"><span>{{ project.name }}</span></a>
           <span class="mdl-list__item-text-body">
             {{ project.description }}
           </span>
