--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,13 +4,13 @@
   </div>
   <nav class="mdl-navigation">
     {% include menu.html %}
-    <ul class="mdl-list">
+    <!-- <ul class="mdl-list">
       <li class="mdl-list__item">
         <span class="mdl-list__item-primary-content">
           Latest 3 posts:
         </span>
       </li>
-      <!-- Loop for latest posts -->
+       -- Loop for latest posts --
       {% for post in site.posts limit: 3 %}
       <li class="mdl-list__item mdl-list__item--two-line">
         <span class="mdl-list__item-primary-content">
@@ -21,7 +21,7 @@
         </span>
       </li>
       {% endfor %}
-    </ul>
+    </ul> -->
   </nav>
   <!-- Insert latest posts -->
   <div class="mdl-layout-spacer"></div>
