--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!DOCTYPE html>
-<html lang="{% if page.language ‰}{{ page.language }}{% else %}{{ site.language }}{% endif %}">
+<html lang="{% if page.language %}{{ page.language }}{% else %}{{ site.language }}{% endif %}">
   <head>
     <title>{{ site.title }} {% if page.title %}- {{ page.title }} {% endif %}</title>
     {% include meta.html %}
