--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!DOCTYPE html>
-<html lang="{% if page.language ‰}{{ page.language }}{% else %}{{ site.language }}{% endif %}">
+<html lang="{% if page.language %}{{ page.language }}{% else %}{{ site.language }}{% endif %}">
 {% include meta.html %}
   <head>
     <title>{{ page.title }}</title>
