--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,5 +3,7 @@
   <i class="material-icons">book</i> Blog</a>
 <!-- <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/projects">
   <i class="material-icons">assignment</i> Projects</a> -->
+<a class="mdl-navigation__link mdl-typography--text-uppercase" href="/contact">
+<i class="material-icons">assignment</i> Contact</a> 
 <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/about">
   <i class="material-icons">fingerprint</i> About</a>
