Fix: blog in landing

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -17,7 +17,7 @@
           {{content}}
           <!-- Navigation buttons -->
           <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="https://blog.mcomisso.xyz/">Blog</a>
+            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/blog">Blog</a>
             <!-- <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/projects">Projects</a> -->
             <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/about">About</a>
           </div>
