--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -20,6 +20,7 @@
             <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/blog">Blog</a>
             <!-- <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/projects">Projects</a> -->
             <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/about">About</a>
+            <a class="mdl-button mdl-js-button mdl-button--colored mdl-js-ripple-effect" href="/contact">Contact</a>
           </div>
 
         </div>
