--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
 <!-- Add this at the end of the page for performance++ -->
-<script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
-<script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.js"></script>
+<script src="/bower_components/material-design-lite/material.min.js"></script>
+<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/bower_components/dialog-polyfill/dialog-polyfill.js"></script>
 {% include google_analytics.html %}
