--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@ comments: true
         {{page.previous.title}}
       </div>
       {% else %}
-      <a href="#" class="mdl-button mdl-button--disabled" id="prev-button">PREVIOUS</a>
+      <a href="javascript:void(0);" class="mdl-button mdl-button--disabled" id="prev-button">PREVIOUS</a>
       {% endif %}
     </div>
     <div class="mdl-cell--2-col mdl-cell--8-offset-desktop mdl-cell--2-col-phone mdl-cell--4-col-tablet">
@@ -52,7 +52,7 @@ comments: true
         {{page.next.title}}
       </div>
       {% else %}
-      <a href="#" class="mdl-button mdl-button--disabled" id="next-button">NEXT</a>
+      <a href="javascript:void(0);" class="mdl-button mdl-button--disabled" id="next-button">NEXT</a>
       {% endif %}
     </div>
   </div>
