--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -11,3 +11,5 @@
 <link rel="stylesheet" href="/css/solarized-dark.min.css" media="screen" title="solarized" charset="utf-8">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dialog-polyfill/0.4.2/dialog-polyfill.min.css">
+
+<link href="https://micro.blog/mcomisso" rel="me" />
