--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,22 +4,24 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Posts</h1>
+  <h1 class="page-heading">Postssss</h1>
   
   {{ content }}
 
   <ul class="post-list">
-    
+
+    {{ site.posts | inspect }}
+
     {% for post in site.posts %}
-    {% if post.categories contains "micropost" %}
-    
-    <li>
-      <span class="post-meta">{{ post.date | date: "%b %-d, %Y - %H:%M" }}</span>
-      <h3>{{ post.content }}</h3>          
-    </li>
+      {% if post.categories contains "micropost" %}
+      {{ post.content }}
+      <li>
+        <span class="post-meta">{{ post.date | date: "%b %-d, %Y - %H:%M" }}</span>
+        <h3>{{ post.content }}</h3>          
+      </li>
 
       {% else %}
-        
+          
       <li>
           {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}      
           <span class="post-meta">{{ post.date | date: date_format }}</span>
