Using new font awesome lib

--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,4 +1,2 @@
-<!-- Font Awesome! https://fortawesome.github.io -->
-<script src="https://use.fontawesome.com/af7a57eeb1.js"></script>
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 <link href="https://micro.blog/mcomisso" rel="me" />
