--- a/_includes/forkme.html
+++ b/_includes/forkme.html
@@ -1,6 +1,6 @@
 <button id="fork-me-button" onclick="window.location.href='https://github.com/mcomisso/mcomisso.github.io'"
   class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
-  <i class="fa fa-github-square"></i>
+  <i class="fab fa-github-square"></i>
 </button>
 <div class="mdl-tooltip" for="fork-me-button">
   <span>Clone this site</span>
