--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,6 +32,6 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe"> <i class="fab fa-rss"></i> Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a> or <a href="{{ "/feed.json" | relative_url }}">via JSON</a> </p>
+  <p class="rss-subscribe"> <i class="fas fa-rss-square"></i> Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a> or <a href="{{ "/feed.json" | relative_url }}">via JSON</a> </p>
 
 </div>
