Adds head.html and adds custom styles in it

--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,2 +1,3 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-<link href="https://micro.blog/mcomisso" rel="me" />
+
+<script src="https://kit.fontawesome.com/9a50aa53b5.js" crossorigin="anonymous"></script>
+<link href="https://micro.blog/mcomisso" rel="me" /> 
