--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,8 @@
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
-  {%- endif -%}
+  {%- endif -%}  
 
+  {%- include meta.html -%}
   {%- include styles.html -%}
 </head>
